try to set some jvm flags